-----------------------------------------------------------------------------------------
	$Id$
-----------------------------------------------------------------------------------------

2011-08-30	jluis
	* gmt_plot.h:		More Voodoo. If the "char string[GMT_TEXT_LEN64];" 
				is not the first member in the GMT_SYMBOL struct than 
				psxy -Sl<size>/Text will have corrupt 'Text'in non-debug 
				binaries compiled with VS2010. 

2011-08-29	remko
	* gmt_init.c gmt_error.h:	Let GMT_report product return value of 1.
	* configure.ac:		When --includedir is specified, do not automatically add /gmt.

2011-08-28	pwessel
	* pstext_func.c:	Stated one needed to use psclip -Ct but it was -Cs
	* psclip.txt:		Fixed old -C syntax in synopsis.
	* gmt_io.c:		The GMT_not_numeric function failed to consider the
				trailing units, e.g., -0.2c.  This tripped up gmtset.

2011-08-27	pwessel
	* gmtselect_func.c:	Did not return to read after finding a table header
	* gmt_support.c:	Reduced the verbosity level of contouring -Gd messages
				to require -V3 as it is too detailed and repetitive for -V2.

-----------------------------------------------------------------------------------------
2011-08-26	pwessel
	GMT 5.0.0b finalized and released.
-----------------------------------------------------------------------------------------

2011-08-26	remko
	* pslib.c:		Made PSL_comment and PSL_command functions instead of macros
				for all platforms
	* gmt_init.c:		Made GMT_message and GMT_report functions instead of macros
				for all platforms

2011-08-25	remko
	* configure.ac:		Fixed bug in finding pkg-config

2011-08-25	pwessel
	* grdtrack_func.c:	Added -N to NOT skip points outside grid domain.

2011-08-24	jluis
	* gmtapi_util.c:	A bit of voodoo programming to make vanish some tests crash on Windows

2011-08-24	pwessel, remko
	* gmtswitch:		Added man page in src, and script moved to src.

2011-08-24	remko
	* gmt_version.c:	Introduced new function GMT_version() to generate version number.